# pmmcp

./: .dockerignore  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  docker-compose.yml  pre-commit.sh  pyproject.toml
.claude/commands/: pre-push-sanity.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
agents/: metric-explorer.md  performance-comparator.md  performance-investigator.md  performance-reporter.md
docs/: investigation-flow.md
docs/plans/: 2026-03-04-just-task-runner-design.md  2026-03-04-just-task-runner.md  2026-03-08-pmproxy-hardening-and-sqlite-sink.md  2026-03-09-sqlite-sink-design.md  2026-03-09-sqlite-sink-implementation.md
generator/: Dockerfile  entrypoint.sh
profiles/: spike.yml  steady-state.yml
profiles/e2e/: spike.yml  steady-state.yml
profiles/scenarios/: saas-diurnal-week.yml
scripts/: pre-push-sanity.sh
specs/001-pcp-mcp-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-integration-e2e-tests/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-mcp-prompts/: plan.md  research.md  spec.md  tasks.md
specs/004-pmlogsynth-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-investigation-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-quick-investigate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-specialist-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-specialist-baselining/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-grafana-compose/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/pmmcp/: __main__.py  client.py  config.py  models.py  server.py  session_db.py  utils.py
tests/: conftest.py
tests/contract/: test_mcp_schemas.py  test_prompts.py
tests/e2e/: conftest.py  test_fetch_batching.py  test_grafana.py  (+3 more)
(+99 files in other folders)
