[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmmcp"
version = "0.1.0"
description = "MCP server for PCP (Performance Co-Pilot) via pmproxy"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "pytest-cov",
]

[project.scripts]
pmmcp = "pmmcp.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
