[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pmmcp"
version = "0.1.0"
description = "MCP server for PCP (Performance Co-Pilot) via pmproxy"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "respx",
    "ruff",
    "pytest-cov",
    "pmlogsynth @ git+https://github.com/tallpsmith/pmlogsynth",
]

[project.scripts]
pmmcp = "pmmcp.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Prompt modules contain long prose strings — line length is irrelevant
"src/pmmcp/prompts/specialist.py" = ["E501"]
"src/pmmcp/prompts/coordinator.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
timeout = 20
testpaths = ["tests"]
markers = [
    "integration: in-process MCP protocol tests (mocked pmproxy)",
    "e2e: subprocess full-stack tests (requires PMPROXY_URL or SKIP_E2E=1)",
]
